Fixed pagination not showing in chrome v2

--- a/datafari-webapp/src/main/webapp/resources/css/custom/new-style.css
+++ b/datafari-webapp/src/main/webapp/resources/css/custom/new-style.css
@@ -443,6 +443,7 @@ a {
 
   #solr {
     width: 80%;
+    padding-bottom: 13.5% !important;
   }
 
   .title, .title .externallinktitle, .title .externalappilinktitle {
@@ -604,7 +605,6 @@ a {
           height: 35px;
           width: 150px; }
     body .doc_list_pagination {
-      margin-bottom: 13.5% !important;
       border-top: 1px solid #666;
       padding-top: 10px; }
     body .footer-respon {
