--- a/datafari-webapp/src/main/webapp/resources/css/results-template.css
+++ b/datafari-webapp/src/main/webapp/resources/css/results-template.css
@@ -709,7 +709,7 @@
 		-webkit-animation-duration: 0.2s; /* Chrome, Safari, Opera */
 	    animation-duration: 0.2s;
 	}
-	#solr { margin:0 auto; margin-bottom:3%;  width:100%;}
+	#solr { margin:0 auto; padding-bottom:3%;  width:100%;}
 	#solr .col.left { display:inline-block; width:25%; margin-top:1%; padding:0; margin-bottom: 50px;}
 	#solr .col.right { position:relative; padding:0 10px; width:40%; float:left;margin-top:1%; }
 
